show selected modifiers in grid - ms

--- a/src/components/EncounterGrid/encounterGrid.scss
+++ b/src/components/EncounterGrid/encounterGrid.scss
@@ -32,7 +32,7 @@
 }
 
 .modifier-cell {
-  background-color: #f0f0f0;
+  // background-color: #f0f0f0;
   padding: 8px;
-  border: 1px solid #ccc;
+  // border: 1px solid #ccc;
 }
