--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -1,33 +1,39 @@
-.raiderInput input {
-  border: 0;
-  background: transparent;
-  color: #ffffff;
-  margin-left: 10px;
-  border-bottom: 2px solid grey;
-  padding: 2px;
-}
+// .raiderInput input {
+//   border: 0;
+//   background: transparent;
+//   color: #ffffff;
+//   margin-left: 10px;
+//   border-bottom: 2px solid grey;
+//   padding: 2px;
+// }
 
-.modifierInput label,
-.spanLabel {
-  font-weight: 700;
-}
+// .modifierInput label,
+// .spanLabel {
+//   font-weight: 700;
+//   padding-right: 10px;
+// }
 
-.rowContainer {
-  display: flex;
-  flex-direction: row;
-}
+// .description {
+//   font-weight: 400;
+//   padding-left: 10px;
+// }
 
-.nameContainer {
-  width: 20%;
-  text-align: left;
-}
+// .rowContainer {
+//   display: flex;
+//   flex-direction: row;
+// }
 
-.teamModContainer {
-  width: 10%;
-  text-align: left;
-}
+// .nameContainer {
+//   width: 20%;
+//   text-align: left;
+// }
 
-.descriptionContainer {
-  width: 70%;
-  text-align: left;
-}
+// .teamModContainer {
+//   width: 10%;
+//   text-align: left;
+// }
+
+// .descriptionContainer {
+//   width: 70%;
+//   text-align: left;
+// }
