--- a/src/components/Wheel/wheel.scss
+++ b/src/components/Wheel/wheel.scss
@@ -22,7 +22,7 @@
   width: calc(var(--wheel-size) + 2 * var(--wheel-border-size));
   height: calc(var(--wheel-size) + 2 * var(--wheel-border-size));
   padding: 3px;
-  margin: auto;
+  // margin: auto;
   background-color: var(--neutral-color);
   border: solid var(--wheel-color) 3px;
   border-radius: 50%;
