--- a/src/components/EncounterGrid/encounterGrid.scss
+++ b/src/components/EncounterGrid/encounterGrid.scss
@@ -1,10 +1,12 @@
+:root {
+  $cellBackgroundColor: #0a1a59;
+}
+
 .encounter-grid {
   display: grid;
-  grid-template-columns: minmax(100px, 1fr) repeat(6, 1fr); // Header column + 7 columns
+  grid-template-columns: minmax(120px, 1fr) repeat(6, 1fr); // Header column + 7 columns
   grid-template-rows: minmax(50px, 1fr) repeat(9, 1fr); // Header row + 7 rows
   grid-gap: 4px;
-  // align-items: center;
-  // justify-items: center;
 }
 
 .empty-cell {
@@ -27,19 +29,25 @@
 
 .grid-cell {
   text-align: center;
-  width: 100%;
+  // width: 100%;
   height: 100%;
-  margin-top: auto;
-  margin-bottom: auto;
+  // margin-top: auto;
+  // margin-bottom: auto;
+  display: flex;
+
+  /* Make a horizontal flexbox (the default) */
+  flex-direction: row;
+
+  /* The important part: vertically center the items */
+  align-items: center;
 }
 
 .modifier-cell {
-  background-color: #0a1a59;
   padding: 8px;
-  width: 100%;
+  // width: 100%;
   border: 1px solid #cccccc6a;
-  flex: 1;
-  margin: auto;
+  // flex: 1;
+  // margin: auto;
 }
 
 .selected {
