--- a/src/components/ModifierTooltip/ModifierTooltip.scss
+++ b/src/components/ModifierTooltip/ModifierTooltip.scss
@@ -5,8 +5,8 @@
 .tooltip-container .tooltip {
   visibility: hidden;
   width: 150px;
-  background-color: black;
-  color: white;
+  background-color: rgb(176, 176, 219);
+  color: rgb(16, 2, 2);
   font-size: 16px;
   text-align: center;
   border-radius: 6px;
@@ -16,10 +16,9 @@
   left: 105%;
   transform: translate(-50%);
   z-index: 1;
-  // margin-top: 5px;
-  // margin-left: -60px;
   opacity: 0;
   transition: opacity 0.3s;
+  border: 1px solid white;
 }
 
 .tooltip-container:hover .tooltip {
